# renpho-escs20m

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml
src/renpho_escs20m/: __init__.py  _version.py  body_metrics.py  const.py  data.py  detection.py  scale.py
src/renpho_escs20m/qn/: __init__.py  body_metrics.py  protocol.py  scale.py
src/renpho_escs20m/xaabb/: __init__.py  protocol.py  scale.py
tests/: test_body_metrics.py  test_calculate_body_fat.py  test_detection.py  test_device_metadata.py  test_qn_transport.py  test_scale_commands.py  test_xaabb_protocol.py
